<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".newTicketFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--Category-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ticket_category"
                android:layout_marginBottom="@dimen/newTicket_field_marginBottom">

                <AutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Subject-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/newTicket_field_marginBottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newTicket_subject_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ticket_subject" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Description-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/newTicket_field_marginBottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newTicket_description_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ticket_description"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:minLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/thumbnails_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/newTicket_attachment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attachment" />

            <Button
                android:id="@+id/create_ticket_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/create_ticket_button" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>