<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/ticket_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/ticket_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#2E2D2D"
                android:textSize="14sp"
                android:text="Loading..."
                tools:text="Pending" />

            <TextView
                android:id="@+id/ticket_createdOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2E2D2D"
                android:textSize="14sp"
                tools:text="12:00 PM, 2 JUNE 2019" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ticket_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ticket_info"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ticket_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="Category" />

            <TextView
                android:id="@+id/ticket_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#2E2D2D"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Subject" />

            <TextView
                android:id="@+id/ticket_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#2E2D2D"
                android:textSize="16sp"
                tools:text="Description" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="10dp"
                android:id="@+id/thumbnails_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/avatar_cardView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/ticket_creator_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="avatar"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ticket_creator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="14sp"
                        tools:text="Name" />

                    <TextView
                        android:id="@+id/ticket_creator_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        tools:text="Role" />

                    <TextView
                        android:id="@+id/ticket_creator_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        tools:text="Email" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ticket_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/pending_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCA28"
                android:text="@string/pending_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/solved_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00E676"
                android:text="@string/solved_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/closed_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B0BEC5"
                android:text="@string/closed_button"
                android:visibility="gone" />

        </LinearLayout>


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
